updated README for release

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
-LNX_Studio
+# LNX_Studio
 
-testing
+LNX_Studio is a Digital Audio Work Station created in the SuperCollider language. It has a powerful set of tools for creating music, all of which can be networked. Co-location gigs or real-time collaborations don't have to be in the same room.
+
+In LNX_Studio you will find a library full of Drum Machines for creating beats, Synthesisers for making melodies, Effects for processing sounds and MIDI modules for controlling internal or external equipment.
+
+# Installation
+
+This repository contains is the bare-bones source code for LNX_Studio. The full package is a standalone application and can be downloaded for Mac OSX 10.9+ [here](http://lnxstudio.sourceforge.net/). Linux and Windows versions are development. For more information, please see the [LNX_Studio website](http://lnxstudio.sourceforge.net/).
